found some issues with footer on about page. used z-index to fix

--- a/assets/css/index-style.css
+++ b/assets/css/index-style.css
@@ -10,6 +10,7 @@
     width: 100%;
     height: 60px;
     line-height: 60px;
+    z-index: 5;
 }
 .footer2 {
     position: absolute;
