--- a/assets/css/portfolio-style.css
+++ b/assets/css/portfolio-style.css
@@ -4,9 +4,10 @@
     width: 100%;
     height: 60px;
     line-height: 60px;
+    z-index: 5;
 }
 .footer2 {
-    position: absolute;
+    /* position: absolute; */
     bottom: 0;
     width: 100%;
     height: 70px;
